@@ -5280,6 +5280,14 @@ void Workspace::define_wsv_data()
        "that the viewing or propagation direction is north-wise and +90 means\n"
        "that the direction of concern goes eastward.\n"
        "\n"
+       "No azimuth angle shall be specified for 1D and 2D. This angle is in\n"
+       "general of no concern for these atmospheric dimensionalities, but\n"
+       "matter in some cases, such as with respect to the Doppler shift due\n"
+       "to winds. For 1D the azimuth angle is then assumed to be 0 deg, i.e.\n"
+       "the sensor is treated to be directed towards North. For 2D, the \n"
+       "implied azimuth is 0 or 180, depending of the zenith angle is positive\n"
+       "or negative.\n"
+       "\n"
        "See further the ARTS user guide (AUG). Use the index to find where\n"
        "this variable is discussed. The variable is listed as a subentry to\n"
        "\"workspace variables\".\n"
